:sparkles: 백그라운드에서 알림 띄우는 것 테스트 대신 완전 느리게 옴

--- a/frontend/android/app/src/main/res/values/styles.xml
+++ b/frontend/android/app/src/main/res/values/styles.xml
@@ -15,4 +15,12 @@
     <style name="NormalTheme" parent="@android:style/Theme.Light.NoTitleBar">
         <item name="android:windowBackground">?android:colorBackground</item>
     </style>
+
+    <style name="DefaultNotificationChannelId">
+        <item name="channelId">default_channel</item>
+    </style>
+
+    <!-- <style name="AdditionalNotificationChannelId">
+        <item name="channelId">YOUR_ADDITIONAL_NOTIFICATION_CHANNEL_ID</item>
+    </style> -->
 </resources>
