:sparkles: 서버에서 알림 보내면 오는 것까지 확인 노하우 API 몇 개 연결 노하우 무한 스크롤 제작 중인데 아직 덜 됨

--- a/frontend/android/app/src/main/res/values/styles.xml
+++ b/frontend/android/app/src/main/res/values/styles.xml
@@ -16,9 +16,7 @@
         <item name="android:windowBackground">?android:colorBackground</item>
     </style>
 
-    <style name="DefaultNotificationChannelId">
-        <item name="channelId">default_channel</item>
-    </style>
+    <string name="default_notification_channel_id">default_channel_id</string>
 
     <!-- <style name="AdditionalNotificationChannelId">
         <item name="channelId">YOUR_ADDITIONAL_NOTIFICATION_CHANNEL_ID</item>
